--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ pydantic-settings = "^2.7.1"
 aiokafka = "^0.12.0"
 asyncpg = "^0.30.0"
 greenlet = "^3.1.1"
+isort = "^5.13.2"
+black = "^24.10.0"
+mypy = "^1.14.1"
 
 
 [build-system]
